--- a/update-by-dealer-list.html
+++ b/update-by-dealer-list.html
@@ -76,17 +76,16 @@
           <div class="left-header col-xxl-5 col-xl-6 col-lg-5 col-md-4 col-sm-3 p-0">
             <div> <a class="toggle-sidebar" href="#"> <i class="iconly-Category icli"> </i></a>
               <div class="d-flex align-items-center gap-2 ">
-                <h4 class="f-w-600">Welcome Vipul Bhai</h4><img class="mt-0" src="/assets/images/hand.gif" alt="hand-gif">
+                <h4 class="f-w-600">Welcome Vipul Bhai</h4><img class="mt-0" src="assets/images/hand.gif" alt="hand-gif">
               </div>
             </div>
-            <div class="welcome-content d-xl-block d-none"><span class="text-truncate col-12"> </span></div>
           </div>
           <div class="nav-right col-xxl-7 col-xl-6 col-md-7 col-8 pull-right right-header p-0 ms-auto">
             <ul class="nav-menus"> 
               <li class="profile-nav onhover-dropdown"> 
-                <div class="media profile-media"><img class="b-r-10" src="/assets/images/dashboard/profile.png" alt="">
+                <div class="media profile-media"><img class="b-r-10" src="assets/images/dashboard/profile.png" alt="">
                   <div class="media-body d-xxl-block d-none box-col-none">
-                    <div class="d-flex align-items-center gap-2"> <span>Vipul Bhai Mora </span><i class="middle fa fa-angle-down"> </i></div>
+                    <div class="d-flex align-items-center gap-2"> <span>Vipul Bhai </span><i class="middle fa fa-angle-down"> </i></div>
                     <p class="mb-0 font-roboto">Admin</p>
                   </div>
                 </div>
@@ -113,7 +112,7 @@
       <div class="page-body-wrapper">
         <!-- Page Sidebar Start-->
         <div class="sidebar-wrapper" data-layout="stroke-svg">
-          <div class="logo-wrapper"><a href="index.html"><img class="img-fluid w-75" src="/assets/images/logo/logo-unique_it.webp" alt=""></a>
+          <div class="logo-wrapper"><a href="index.html"><img class="img-fluid w-75" src="assets/images/logo/logo-unique_it.webp" alt=""></a>
             <div class="back-btn"><i class="fa fa-angle-left"> </i></div>
             <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
           </div>
@@ -122,7 +121,7 @@
             <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
             <div id="sidebar-menu">
               <ul class="sidebar-links" id="simple-bar">
-                <li class="back-btn"><a href="index.html"><img class="img-fluid" src="/assets/images/logo/logo-icon.png" alt=""></a>
+                <li class="back-btn"><a href="index.html"><img class="img-fluid" src="assets/images/logo/logo-icon.png" alt=""></a>
                   <div class="mobile-back text-end"> <span>Back </span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                 </li>
                 <li class="pin-title sidebar-main-title">
@@ -171,7 +170,7 @@
 <li><a href="update-by-dealer-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Design by Dealer List</a></li>
                 </ul>
               </li>
-              <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+              <!-- <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
                 <i class="fa fa-file-text text-white" aria-hidden="true"></i>
                 <span class="lan-10">Blog</span></a>
               <ul class="sidebar-submenu">
@@ -179,9 +178,8 @@
                     Blog</a></li>
                 <li><a href="blog-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Blog List</a>
                 </li>
-                <!-- <li><a href="team-member-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Team List</a></li> -->
               </ul>
-            </li>
+            </li> -->
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="inquiry-list.html">
                   <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
@@ -210,7 +208,7 @@
                     <ol class="breadcrumb">
                       <li class="breadcrumb-item"><a href="index.html">                                       
                           <svg class="stroke-icon">
-                            <use href="/assets/svg/icon-sprite.svg#stroke-home"></use>
+                            <use href="assets/svg/icon-sprite.svg#stroke-home"></use>
                           </svg></a></li>
                       <li class="breadcrumb-item active">Design By Dealer List</li>
                     </ol>
@@ -243,8 +241,8 @@
                         <form class="stepper-one row needs-validation custom-input" novalidate="">
                         
                               <div class="col-md-4">
-                                <label class="form-label" for="zodic-sign">Dealer Name</label>
-                                <input class="form-control w-100 rounded border"  placeholder="Please Enter Dealer Name">
+                                <label class="form-label" for="zodic-sign">Dealer Code</label>
+                                <input class="form-control w-100 rounded border"  placeholder="Please Enter Dealer Code">
                               </div>
                           <div class="wizard-footer mt-2 d-flex gap-2 justify-content-end">
                             <button class="btn btn-primary" type="submit">Search</button>
@@ -268,7 +266,7 @@
                             <thead>
                               <tr class="bg-light">
                                 <th scope="col" class="text-center">No</th>
-                                <th scope="col" class="text-center">Dealer Name <i class="fa fa-sort opacity-25" aria-hidden="true"></i></th>
+                                <th scope="col" class="text-center">Dealer Code <i class="fa fa-sort opacity-25" aria-hidden="true"></i></th>
                                 <th scope="col" class="text-center">Total Designs <i class="fa fa-sort opacity-25" aria-hidden="true"></i></th>
                                 <th scope="col" class="text-center">Action</th>
                               </tr>
@@ -344,33 +342,33 @@
       </div>
     </div>
     <!-- latest jquery-->
-    <script src="/assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
     <!-- Bootstrap js-->
-    <script src="/assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- feather icon js-->
-    <script src="/assets/js/icons/feather-icon/feather.min.js"></script>
-    <script src="/assets/js/icons/feather-icon/feather-icon.js"></script>
+    <script src="assets/js/icons/feather-icon/feather.min.js"></script>
+    <script src="assets/js/icons/feather-icon/feather-icon.js"></script>
     <!-- scrollbar js-->
-    <script src="/assets/js/scrollbar/simplebar.js"></script>
-    <script src="/assets/js/scrollbar/custom.js"></script>
+    <script src="assets/js/scrollbar/simplebar.js"></script>
+    <script src="assets/js/scrollbar/custom.js"></script>
     <!-- Sidebar jquery-->
-    <script src="/assets/js/config.js"></script>
+    <script src="assets/js/config.js"></script>
     <!-- Plugins JS start-->
-    <script src="/assets/js/sidebar-menu.js"></script>
-    <script src="/assets/js/sidebar-pin.js"></script>
-    <script src="/assets/js/slick/slick.min.js"></script>
-    <script src="/assets/js/slick/slick.js"></script>
-    <script src="/assets/js/header-slick.js"></script>
-    <script src="/assets/js/chart/apex-chart/apex-chart.js"></script>
+    <script src="assets/js/sidebar-menu.js"></script>
+    <script src="assets/js/sidebar-pin.js"></script>
+    <script src="assets/js/slick/slick.min.js"></script>
+    <script src="assets/js/slick/slick.js"></script>
+    <script src="assets/js/header-slick.js"></script>
+    <script src="assets/js/chart/apex-chart/apex-chart.js"></script>
     
     <!-- calendar js-->
-    <script src="/assets/js/datepicker/date-picker/datepicker.js"></script>
-    <script src="/assets/js/datepicker/date-picker/datepicker.en.js"></script>
-    <script src="/assets/js/datepicker/date-picker/datepicker.custom.js"></script>
-    <script src="/assets/js/dashboard/dashboard_3.js"></script>
+    <script src="assets/js/datepicker/date-picker/datepicker.js"></script>
+    <script src="assets/js/datepicker/date-picker/datepicker.en.js"></script>
+    <script src="assets/js/datepicker/date-picker/datepicker.custom.js"></script>
+    <script src="assets/js/dashboard/dashboard_3.js"></script>
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
-    <script src="/assets/js/script.js"></script> 
+    <script src="assets/js/script.js"></script> 
     <script src="assets/js/filter.js"></script>
     <!--  -->
   <!-- Code injected by live-server -->
