set more details in brand wise list

--- a/add-blog.html
+++ b/add-blog.html
@@ -159,11 +159,14 @@
                 <ul class="sidebar-submenu">
                   <li><a href="mock-up-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Mock Up</a></li>
                   <li><a href="mock-up-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Mock Up List</a></li>
-                  <li><a href="Loginofmanufacturer.html"><i class="fa fa-list text-white" aria-hidden="true"></i> select MockUps</a></li>
-               
+                
                 </ul>
               </li>
-
+              <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                <a class="sidebar-link" href="Loginofmanufacturer.html">
+                <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
+                <span class="lan-2">select Design</span></a>
+              </li>
               <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
                 <i class="fa fa-users text-white" aria-hidden="true"></i>
                 <span class="lan-8">Dealer</span></a>
