--- a/mock-up-list.html
+++ b/mock-up-list.html
@@ -154,9 +154,13 @@
                   <ul class="sidebar-submenu">
                     <li><a href="mock-up-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Mock Up</a></li>
                     <li><a href="mock-up-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Mock Up List</a></li>
-                    <li><a href="Loginofmanufacturer.html"><i class="fa fa-list text-white" aria-hidden="true"></i> select MockUps</a></li>
-                 
+                    
                   </ul>
+                </li>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="Loginofmanufacturer.html">
+                  <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
+                  <span class="lan-2">select Design</span></a>
                 </li>
 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
@@ -298,7 +302,6 @@
 
                                       <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
-                                          <li class="edit"> <a href="add-blog.html" class="bg-primary p-2 rounded"><i class="fa fa-plus-square text-white" aria-hidden="true"></i></a></li>
                                           <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
                                           <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                         </ul>
@@ -313,7 +316,6 @@
 
                                       <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
-                                          <li class="edit"> <a href="add-blog.html" class="bg-primary p-2 rounded"><i class="fa fa-plus-square text-white" aria-hidden="true"></i></a></li>
                                           <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
                                           <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                         </ul>
