set design in Delaer's design assign

--- a/brandwiselist.html
+++ b/brandwiselist.html
@@ -239,6 +239,7 @@
                               <td class="text-center table-data">Ceramic</td>
                               <td class="text-center col-fix table-data"> 
                                 <ul class="action d-flex justify-content-center"> 
+                                  <li class="delete"><a href="#" class="bg-primary p-2 rounded"><i class="fa fa-eye text-white" aria-hidden="true"></i></a></li>
                                   <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
@@ -360,7 +361,9 @@
                               <th scope="col" class="text-center">Design Name</th>
                               <th class="text-center">Size</th>    
                               <th class="text-center">Finish</th>    
-                              <th class="text-center">Category</th>    
+                              <th class="text-center">Category</th>  
+                              <th class="text-center">Action</th>    
+
                             </tr>
                           </thead>
                           <tbody>
@@ -371,6 +374,11 @@
                               <td class="text-center table-data">16 * 18</td>
                               <td class="text-center table-data">963258</td>
                               <td class="text-center table-data">Ceramic</td>
+                              <td class="text-center col-fix table-data"> 
+                                <ul class="action d-flex justify-content-center"> 
+                                  <li class="delete"><a href="#" class="bg-primary p-2 rounded"><i class="fa fa-eye text-white" aria-hidden="true"></i></a></li>
+                                </ul>
+                              </td>
                             </tr>
                             <tr>
                               <td class="text-center table-data"><input class="form-check-input border-info" id="flexCheckDefault" type="checkbox" value=""></td>
@@ -379,6 +387,11 @@
                               <td class="text-center table-data">16 * 18</td>
                               <td class="text-center table-data">963258</td>
                               <td class="text-center table-data">Ceramic</td>
+                              <td class="text-center col-fix table-data"> 
+                                <ul class="action d-flex justify-content-center"> 
+                                  <li class="delete"><a href="#" class="bg-primary p-2 rounded"><i class="fa fa-eye text-white" aria-hidden="true"></i></a></li>
+                                </ul>
+                              </td>
                             </tr>
                           </tbody>
                         </table>
