--- a/update-design.html
+++ b/update-design.html
@@ -206,7 +206,7 @@
             <div class="page-title">
               <div class="row">
                 <div class="col-6">
-                  <h4>Mockups Assign to D001</h4>
+                  <h4>Designs Assign to D001</h4>
                 </div>
                 <div class="col-6">
                   <ol class="breadcrumb">
@@ -242,7 +242,10 @@
                           <thead>
                             <tr class="bg-light">
                               <th scope="col" class="text-center">Image</th>
-                              <th scope="col" class="text-center">Mock Up Name</th>
+                              <th scope="col" class="text-center">Design Name</th>
+                              <th class="text-center">Size</th>    
+                              <th class="text-center">Finish</th>    
+                              <th class="text-center">Category</th>    
                               <th scope="col" class="text-center">Action</th>
                             </tr>
                           </thead>
@@ -250,8 +253,12 @@
                             <tr>
                               <th scope="row" class="text-center table-data"><img src="assets/images/demo 2.jpg" width="50px" height="50px" alt=""></th>
                               <td class="text-center table-data">Spencera</td>
+                              <td class="text-center table-data">16 * 18</td>
+                              <td class="text-center table-data">963258</td>
+                              <td class="text-center table-data">Ceramic</td>
                               <td class="text-center col-fix table-data"> 
                                 <ul class="action d-flex justify-content-center"> 
+                                  <li class="delete"><a href="#" class="bg-primary p-2 rounded"><i class="fa fa-eye text-white" aria-hidden="true"></i></a></li>
                                   <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
@@ -329,7 +336,12 @@
                             <tr class="bg-light">
                               <th scope="col" class="text-center"><input class="form-check-input border-info" id="flexCheckDefault" type="checkbox" value=""></th>
                               <th scope="col" class="text-center">Image</th>
-                              <th scope="col" class="text-center">Mock Up Name</th>
+                              <th scope="col" class="text-center">Design Name</th>
+                              <th class="text-center">Size</th>    
+                              <th class="text-center">Finish</th>    
+                              <th class="text-center">Category</th>  
+                              <th class="text-center">Action</th>    
+
                             </tr>
                           </thead>
                           <tbody>
@@ -337,11 +349,27 @@
                               <td class="text-center table-data"><input class="form-check-input border-info" id="flexCheckDefault" type="checkbox" value=""></td>
                               <th scope="row" class="text-center table-data"><img src="assets/images/demo 2.jpg" width="50px" height="50px" alt=""></th>
                               <td class="text-center col-fix table-data">xys</td>
+                              <td class="text-center table-data">16 * 18</td>
+                              <td class="text-center table-data">963258</td>
+                              <td class="text-center table-data">Ceramic</td>
+                              <td class="text-center col-fix table-data"> 
+                                <ul class="action d-flex justify-content-center"> 
+                                  <li class="delete"><a href="#" class="bg-primary p-2 rounded"><i class="fa fa-eye text-white" aria-hidden="true"></i></a></li>
+                                </ul>
+                              </td>
                             </tr>
                             <tr>
                               <td class="text-center table-data"><input class="form-check-input border-info" id="flexCheckDefault" type="checkbox" value=""></td>
                               <th scope="row" class="text-center table-data"><img src="assets/images/demo 2.jpg" width="50px" height="50px" alt=""></th>
                               <td class="text-center col-fix table-data">xys</td>
+                              <td class="text-center table-data">16 * 18</td>
+                              <td class="text-center table-data">963258</td>
+                              <td class="text-center table-data">Ceramic</td>
+                              <td class="text-center col-fix table-data"> 
+                                <ul class="action d-flex justify-content-center"> 
+                                  <li class="delete"><a href="#" class="bg-primary p-2 rounded"><i class="fa fa-eye text-white" aria-hidden="true"></i></a></li>
+                                </ul>
+                              </td>
                             </tr>
                           </tbody>
                         </table>
